--- a/client/index.html
+++ b/client/index.html
@@ -203,7 +203,7 @@
             "bg-white/10 backdrop-blur-md rounded-xl shadow-lg overflow-hidden hover:scale-105 transform transition cursor-pointer";
 
           card.innerHTML = `
-            <img src="${vehicle.image || './placeholder-car.jpg'}" 
+            <img src="${vehicle.image || './placeholder.webp'}" 
                 alt="${vehicle.title}" 
                 class="w-full h-48 object-cover" />
 
