--- a/client/index.html
+++ b/client/index.html
@@ -77,34 +77,58 @@
     </div>
   </section>
 
-  <!-- Features Section -->
+   <!-- About Section -->
   <section id="about" class="container mx-auto px-6 py-20">
-    <div class="grid md:grid-cols-3 gap-8 text-center">
-      <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
-        <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/>
-        </svg>
-        <h3 class="text-xl font-semibold mb-2">Easy Search</h3>
-        <p class="text-gray-300">Find your perfect vehicle with our advanced search filters.</p>
-      </div>
-
-      <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
-        <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/>
-        </svg>
-        <h3 class="text-xl font-semibold mb-2">Secure Transactions</h3>
-        <p class="text-gray-300">Buy and sell with confidence using our verified user system.</p>
-      </div>
-
-      <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
-        <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
-          <circle cx="7" cy="17" r="2"/><path d="M9 17h6"/><circle cx="17" cy="17" r="2"/>
-        </svg>
-        <h3 class="text-xl font-semibold mb-2">Quality Vehicles</h3>
-        <p class="text-gray-300">Browse through a wide selection of quality vehicles.</p>
-      </div>
+    <div class="mb-10 text-center">
+      <h2 class="text-4xl font-bold mb-4">About Wheelzy</h2>
+      <p class="text-lg text-gray-600 max-w-2xl mx-auto">
+        Wheelzy is a trusted <span class="font-semibold">vehicle marketplace</span> where users can 
+        easily <span class="text-blue-600 font-semibold">buy and sell vehicles</span>. 
+        We connect genuine buyers and sellers, helping you showcase your car, bike, or other vehicles 
+        with ease. 
+      </p>
+      <p class="mt-4 text-gray-600 max-w-2xl mx-auto">
+        <strong>How it works:</strong> Simply sign up, list your vehicle with images, price, and 
+        description, and connect with interested buyers. Buyers can browse listings, message owners, 
+        and arrange meetings or deals directly. 🚗
+      </p>
     </div>
+
+    <div class="grid md:grid-cols-3 gap-8 text-center">
+  <!-- Sell Your Vehicle -->
+  <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
+    <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path d="M3 13h2l1 9h12l1-9h2M5 13V7a7 7 0 0 1 14 0v6"/>
+    </svg>
+    <h3 class="text-xl font-semibold mb-2">List Your Vehicle</h3>
+    <p class="text-gray-500">
+      Post your car, bike, or other vehicles for sale with images, details, and price in just a few clicks.
+    </p>
+  </div>
+
+  <!-- Connect with Buyers -->
+  <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
+    <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path d="M17 20h5V4H2v16h5m10-5a3 3 0 1 0-6 0 3 3 0 0 0 6 0z"/>
+    </svg>
+    <h3 class="text-xl font-semibold mb-2">Connect with Buyers</h3>
+    <p class="text-gray-500">
+      Interested buyers can message you directly through Wheelzy to discuss details and offers.
+    </p>
+  </div>
+
+  <!-- Deal Safely -->
+  <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 hover:scale-105 transform transition shadow-lg">
+    <svg class="h-12 w-12 mx-auto mb-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path d="M12 1l9 4.5v6c0 5.25-3.75 10.74-9 12-5.25-1.26-9-6.75-9-12v-6L12 1z"/>
+    </svg>
+    <h3 class="text-xl font-semibold mb-2">Deal Safely</h3>
+    <p class="text-gray-500">
+      Meet, verify, and close deals securely. Wheelzy helps you connect but transactions are your responsibility.
+    </p>
+  </div>
+</div>
+
   </section>
 
   <!-- Vehicle Listings -->
@@ -112,19 +136,22 @@
     <div class="mb-10 text-center">
       <h2 class="text-4xl font-bold mb-2">Available Vehicles</h2>
       <p class="text-gray-600">Browse through our latest listings</p>
-
-      <!-- Add Vehicle Button -->
-      <button id="add-vehicle-btn"
-        onclick="handleSellClick()"
-        class="mt-6 px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
-        Sell Your Vehicle
-      </button>
     </div>
 
     <div id="vehicle-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       <!-- Vehicle cards injected by script -->
     </div>
   </main>
+
+  <!-- Terms & Conditions -->
+  <footer class="bg-gray-900 text-gray-400 text-center py-6 px-4 mt-12">
+    <p class="text-sm max-w-2xl mx-auto">
+      ⚠️ <strong>Disclaimer:</strong> Wheelzy is only a platform to connect buyers and sellers.  
+      All payments, negotiations, and transactions are done at your <span class="font-semibold text-white">own risk</span>.  
+      Wheelzy does not hold responsibility for disputes, fraud, or any issues that arise between users.  
+      Please verify details before making payments.
+    </p>
+  </footer>
 
   <script>
     function handleSellClick() {
